# mcp_shell_tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REPORT-CLAUDE_CODE.md  pyproject.toml  requirements.txt  run.sh
code/: __init__.py  config.py  main.py  server.py  state.py
code/persistence/: __init__.py  session_manager.py
code/tools/: __init__.py  commands.py  editor.py  filesystem.py  memory.py  project.py  search.py  session.py  shell.py
code/utils/: __init__.py  logging.py  output.py  paths.py
code/workstation_mcp/: server.py
code/workstation_mcp/persistence/: __init__.py  models.py
code/workstation_mcp/tools/: editor.py  filesystem.py  memory.py  project.py  search.py  session.py  shell.py
code/workstation_mcp/utils/: output.py  paths.py
config/: config.example.yaml
docs/: ARCHITECTURE.md  RELEASE_NOTES.md
src/workstation_mcp/: config.py  server.py  state.py
src/workstation_mcp/persistence/: session_manager.py
src/workstation_mcp/tools/: __init__.py  editor.py  filesystem.py  memory.py  project.py  search.py  session.py  shell.py
src/workstation_mcp/utils/: __init__.py
tests/: __init__.py  conftest.py  test_commands.py  test_editor.py  test_filesystem.py  test_persistence.py  test_security.py  test_server.py  test_state.py
